# acme

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE  MIT.LICENSE  QUICKSTART.md  README.md  SECURITY.md  flake.nix  index.md
.artifacts/diagrams/: arch.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue.md  tracking.md
.github/workflows/: cargo-bench.yml  cargo-clippy.yml  cargo-publish.yml  cleanup.yml  clippy.yml  crates.yml  docker.yml  nix.yml  release.yml  rust-clippy.yml  rust.yml
acme/: Cargo.toml  build.rs
acme/benches/: default.rs
acme/examples/: basic.rs  macros.rs
acme/src/: lib.rs
acme/tests/: default.rs
apps/api/: Cargo.toml  README.md
apps/api/src/: application.rs  settings.rs
apps/api/src/actors/: context.rs
apps/api/src/endpoints/: base.rs
apps/cli/: Cargo.toml  Dockerfile  README.md
apps/cli/src/: main.rs
config/: default.config.json
core/: Cargo.toml
core/src/: error.rs  lib.rs  seal.rs
core/src/comp/: component.rs  mod.rs
core/src/events/: event.rs  mod.rs
core/src/exp/: operator.rs  structural.rs
core/src/id/: mod.rs  traits.rs
core/src/id/kinds/: atomic.rs  indexed.rs
core/src/macros/: fmt.rs  gsw.rs  seal.rs  wrapper.rs
core/src/ops/: expr.rs  mod.rs
core/src/ops/kinds/binary/: arithmetic.rs  mod.rs  specs.rs
core/src/ops/traits/: evaluate.rs  operand.rs
core/src/state/: mod.rs  state.rs
core/src/stores/: mod.rs  specs.rs
core/src/traits/: context.rs  eval.rs  handle.rs  mod.rs  propagate.rs  scalar.rs
core/src/types/: container.rs  id.rs  variables.rs
core/src/utils/: generate.rs  time.rs
core/tests/: default.rs
crates/acme/: Cargo.toml  README.md
crates/acme/src/: lib.rs
crates/acme/src/utilities/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: common.rs  lib.rs  utils.rs
crates/core/src/actors/: mod.rs
crates/core/src/actors/blockchain/: blocks.rs  chains.rs  mod.rs
crates/core/src/actors/loggers/: logger.rs  mod.rs
crates/core/src/blockchain/: blocks.rs  chains.rs  mod.rs
crates/core/src/controllers/: mod.rs
crates/core/tests/: test.rs
crates/data/: Cargo.toml
crates/data/src/: common.rs  lib.rs
crates/data/src/models/: accounts.rs  mod.rs  tokens.rs  users.rs
crates/data/src/structures/: merkle.rs  mod.rs
crates/macros/: Cargo.toml
crates/network/: Cargo.toml
crates/network/src/: common.rs  lib.rs
crates/network/src/actors/: mod.rs
crates/network/src/actors/nodes/: mod.rs
crates/network/src/actors/peers/: mod.rs
crates/network/src/actors/providers/: mod.rs
crates/network/src/behaviours/: mod.rs
crates/network/src/behaviours/ipfs/: mainnet.rs  mod.rs
crates/network/src/behaviours/storage/: distkv.rs  mod.rs
engine/: Cargo.toml
engine/src/: engine.rs  error.rs  lib.rs  scheduler.rs
engine/src/pipes/: mod.rs  router.rs
engine/src/sources/: manager.rs  mod.rs  registry.rs
engine/src/traits/: engine.rs
engine/src/types/: aliases.rs
engine/tests/: default.rs
graphs/: Cargo.toml
graphs/src/: graph.rs  lib.rs  macros.rs
graphs/src/cg/: edge.rs  graph.rs  node.rs
graphs/src/dcg/: graph.rs
macros/src/: autodiff.rs  error.rs  lib.rs  operator.rs  utils.rs
macros/src/ast/: ad.rs  grad.rs  mod.rs  operator.rs
macros/src/handle/: item.rs
macros/src/ops/: binary.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/cluster/: mod.rs
math/src/linalg/: fields.rs  mod.rs
math/src/linalg/vs/: mod.rs
math/src/num/: mod.rs  traits.rs
math/src/props/: mod.rs
math/src/stats/: mod.rs
math/src/traits/: mod.rs
network/: Cargo.toml
tensor/: Cargo.toml
