[workspace]
default-members = ["acme"]

exclude = []

members = ["acme", "core"]

resolver = "3"

[workspace.package]
authors = [
    "FL03 <jo3mccain@icloud.com>", 
    "Scattered Systems <support@scsys.io>"
]
categories = []
description = "acme is an automated context management engine designed for the scsys ecosystem."
edition = "2024"
homepage = "https://github.com/FL03/acme/wiki"
keywords = ["scsys", "wasm", "engine", "context", "management"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
resolver = "3"
rust-version = "1.85.0"
version = "0.4.0"

[workspace.dependencies]
# sdk
acme = { default-features = false, path = "acme" }
acme-core = { default-features = false, path = "core" }
# custom
scsys = { default-features = false, features = ["derive", "macros"], version = "0.2.7" }
scsys-derive = { default-features = false, version = "0.2.7" }
# async
futures = { default-features = false, version = "0.3" }
futures-util = { default-features = false, version = "0.3" }
tokio = { default-features = false, version = "1" }
tokio-util = { default-features = false, version = "0.7" }
# benchmarking
criterion = { version = "0.6" }
# concurrency & parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
# data & serialization
bincode = { default-features = false, version = "2" }
bytes = { default-features = false, version = "1" }
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { default-features = false, version = "1" }
serde_json = { default-features = false, version = "1" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# macros
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = ["derive"], version = "0.27" }
# time
chrono = { default-features = false, version = "0.4" }
humantime = { default-features = false, version = "2" }
time = { default-features = false, version = "0.3" }
# random
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
uuid = { default-features = false, version = "1.17" }
# math
num = { default-features = false, version = "0.4" }
num-complex = { default-features = false, version = "0.4" }
num-traits = { default-features = false, version = "0.2" }
# wasm (emscripten)
js-sys = { default-features = false, version = "0.3" }
wasm-bindgen = { default-features = false, version = "0.2" }


[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = 'thin'
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
overflow-checks = false
panic = 'abort'
rpath = false
strip = true
