[workspace]
default-members = [
    "acme"
]


members = [
    "acme", 
    "core",
    "engine",
]

resolver = "3"

[workspace.package]
authors = [
    "FL03 <j3mccain@gmail.com> (https://github.com/FL03)",
    "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)"
]
categories = []
description = "acme is an automated context management engine designed for the scsys ecosystem."
edition = "2024"
homepage = "https://github.com/FL03/acme/wiki"
keywords = ["engine", "automations", "context", "management"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
rust-version = "1.85.0"
version = "0.4.1"

[workspace.dependencies]
# sdk
acme = { default-features = false, path = "acme" }
acme-core = { default-features = false, path = "core" }
acme-engine = { default-features = false, path = "engine" }
# custom
scsys = { default-features = false, features = ["derive", "macros"], version = "0.3.1" }
scsys-derive = { default-features = false, version = "0.3.1" }
# async
# futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, version = "1" }
# benchmarking
criterion = { version = "0.6" }
# concurrency & parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
rayon-core = { default-features = false, version = "1" }
# data-structures
bytes = { default-features = false, version = "1" }
dashmap = { default-features = false, version = "6" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# macros & utilities
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = ["derive"], version = "0.27" }
# serialization
bincode = { default-features = false, version = "2" }
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { default-features = false, version = "1" }
serde_json = { default-features = false, version = "1" }
# time
chrono = { default-features = false, version = "0.4" }
humantime = { default-features = false, version = "2" }
time = { default-features = false, version = "0.3" }
# tracing
tracing = { default-features = false, features = ["attributes"], version = "0.1" }
tracing-subscriber = { default-features = false, features = ["fmt", "env-filter"], version = "0.3" }
# random
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
uuid = { default-features = false, version = "1.17" }
# math
num = { default-features = false, version = "0.4" }
num-complex = { default-features = false, version = "0.4" }
num-traits = { default-features = false, version = "0.2" }
# wasm (emscripten)
js-sys = { default-features = false, version = "0.3" }
wasm-bindgen = { default-features = false, version = "0.2" }


[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false
strip = "symbols"

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 0
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
