[package]
build = "build.rs"
name = "acme"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

# ************* [FF:Dependencies] *************
alloc = [
    "acme-core/alloc",
]

serde = [
    "acme-core/serde",
]

# ********* [FF:Environments] *********
std = [
    "alloc",
    "acme-core/std",
]

[dependencies]
acme-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
lazy_static = { workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

# ********* [benchmarks] *********
[[bench]]
harness = false
name = "default"

# ********* [tests] *********
[[test]]
name = "default"
