[package]
build = "build.rs"
name = "acme"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[lib]
crate-type = [
    "cdylib", 
    "rlib",
]
bench = true
doctest = true
test = true

[dependencies]
acme-core = { workspace = true }
acme-engine = { workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], workspace = true }
lazy_static = { workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

# ************* [FF:Features] *************

nightly = [
    "acme-core/nightly",
    "acme-engine/nightly",
]



# ************* [FF:Dependencies] *************
alloc = [
    "acme-core/alloc",
    "acme-engine/alloc",
]

anyhow = [
    "acme-core/anyhow",
    "acme-engine/anyhow",
]

rand = [
    "rng",
    "acme-core/rand",
    "acme-engine/rand",
]

rng = [
    "acme-core/rng",
    "acme-engine/rng",
]

serde = [
    "acme-core/serde",
    "acme-engine/serde",
]

time = [
    "acme-core/time",
    "acme-engine/time",
]

tracing = [
    "acme-core/tracing",
    "acme-engine/tracing",
]

# ********* [FF:Environments] *********
std = [
    "alloc",
    "acme-core/std",
    "acme-engine/std",
]

wasi = [
    "alloc",
    "acme-core/wasi",
    "acme-engine/wasi",
]

wasm = [
    "alloc",
    "acme-core/wasm",
    "acme-engine/wasm",
]

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "default"

# ************* [Unit Tests] *************
[[test]]
name = "default"
