[package]
name = "acme-core"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std"
]

full = [
    "default",
    "anyhow",
    "json",
    "serde"
]

# ********* [FF] Dependencies *********
alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
]

anyhow = [
    "dep:anyhow",
]

json = [
    "alloc",
    "dep:serde_json",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "anyhow?/std",
    "serde?/std",
    "serde_json?/std",
    "strum/std",
    "thiserror/std",
]

[dependencies]
# data & serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# macros
smart-default = { workspace = true }
strum = { features = ["derive"], workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

# ********* [tests] *********
[[test]]
name = "default"