[package]
authors.workspace = true
categories.workspace = true
description = "A comprehensive tensor library for Rust with support for automatic-differentiation."
edition.workspace = true
homepage.workspace = true
keywords = ["acme", "autodiff", "data-structure", "tensor"]
license.workspace = true
name = "acme-tensor"
repository.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = [
    "std"
]

io = [

]

serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "acme-core/serde"
]

std = [
    "acme-core/std",
]

[build-dependencies]

[dependencies]
num = "0.4"
rawpointer = "0.2"
serde = { optional = true, features = ["derive"], version = "1" }
strum = { features = ["derive"], version = "0.26" }

[dependencies.acme-core]
path = "../core"
version = "0.3.2"
# version = "0.3.2-nightly"

[dev-dependencies]
approx = "0.5"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]