[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://pzzld.eth.link/)"]
description = ""
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-api"
publish = false
readme = "README.md"
repository = "https://github.com/fl03/acme.git"
version = "0.1.0"

[features]
default = ["networking"]

networking = [
    "axum/default",
    "axum/headers",
    "hyper/full",
    "tokio/full",
    "tower/default",
    "tower-http/compression-br",
    "tower-http/propagate-header",
    "tower-http/sensitive-headers",
    "tower-http/trace"
]


[dependencies]
acme = { features = ["full"], path = "../../crates/acme", verion = "0.1.19" }
async-trait = "0.1.56"
axum = { features = ["headers"], version = "0.5.7" }
config = "0.13.1"
futures = "0.3.21"
glob = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.19" }
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
tokio = { features = ["full"], version = "1.19.2" }
tower = "0.4.12"
tower-http = { features = ["compression-br", "propagate-header", "sensitive-headers", "trace"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"