[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "A Rust library created to serve the Scattered-Systems Ecosystem"
edition = "2021"
keywords = ["scsys", "blockchain", "toolkit"]
license = "MIT"
name = "acme"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.19" # TODO - Current Release v0.1.18

[features]
core = ["acme-core"]
default = ["core"]
full = ["core", "data", "macros", "network"]
data = ["acme-data"]
macros = ["acme-macros"]
network = ["acme-network"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
acme-core = { optional = true, path = "../core" }
acme-data = { optional = true, path = "../data" }
acme-macros = { optional = true, path = "../macros" }
acme-network = { optional = true, path = "../network" }