[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "A Rust library created to serve the Scattered-Systems Ecosystem"
edition = "2021"
keywords = ["scsys", "blockchain", "toolkit"]
license = "MIT"
name = "acme"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.20" # TODO - Current Release v0.1.19

[features]
core = ["acme-core"]
default = ["core"]
full = ["core", "data", "macros", "network"]
data = ["acme-data"]
macros = ["acme-macros"]
network = ["acme-network"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "acme"
path = "src/lib.rs"
test = true


[dependencies]

[dependencies.acme-core]
optional = true
path = "../core"
version = "0.1.6"

[dependencies.acme-data]
optional = true
path = "../data"
version = "0.1.6"

[dependencies.acme-macros]
optional = true
path = "../macros"
version = "0.1.6"

[dependencies.acme-network]
optional = true
path = "../network"
version = "0.1.6"

[[test]]
name = "test"
path = "tests/test.rs"
test = true