[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
description = "Core package of Acme, an all-in-one developer toolkit targetting decentralized environments"
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-core"
version = "0.1.6" # TODO - Current Release v0.1.5

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.2.0" }
chrono = "0.4.19"
config = "0.13.1"
glob = "0.3.0"
hex = "0.4.3"
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"